Исправил путь к боту

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "telegram-bot",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "bot.js",
     "scripts": {
-      "start": "node index.js"
+      "start": "node bot.js"
     },
     "dependencies": {
       "node-telegram-bot-api": "^0.59.0",
